fix title clipping

--- a/src/css/StreamThumbnail.scss
+++ b/src/css/StreamThumbnail.scss
@@ -62,7 +62,6 @@
 
   .thumbnail-text {
     display: block;
-    height: 1em;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
